# main.go
@@ -9,6 +9,7 @@ import (
 
 	"github.com/gorilla/mux"
 
+	"press/common/jwt"
 	"press/core/http/middleware"
 	userModule "press/core/user/module"
 	"press/mongo"
@@ -23,7 +24,9 @@ import (
 
 // @contact.name API Support
 // @license.name Apache 2.0
-
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 // @host localhost:5050
 // @BasePath /
 func main() {
@@ -33,17 +36,21 @@ func main() {
 
 	conf, err := config.Parse()
 	if err != nil {
-		log.Fatalf("There was an error found while trying to load the configuration: %v", err)
+		log.Fatalf("error found while trying to load the configuration: %v", err)
 	}
 
 	client, err := mongo.Connect(conf.MongoDB.Host)
 	if err != nil {
-		log.Fatalf("There was an error found while connect to mongodb: %v", err)
+		log.Fatalf("error found while connect to mongodb: %v", err)
 	}
 
-	router.Use(middleware.CorsMiddleware)
+	jwtService := jwt.New(conf)
 
-	userModule.Bootstrap(client, router)
+	router.Use(middleware.CorsMiddleware)
+	// router.Use(middleware.AuthMiddleware)
+
+	userService := userModule.Bootstrap(client, jwtService ,router)
+	router.Use(userService.CreateAuthMiddleware)
 
 	router.PathPrefix("/swagger/").Handler(httpSwagger.Handler(
 		httpSwagger.DeepLinking(true),
@@ -53,6 +60,6 @@ func main() {
 
 	http.Handle("/", router)
 
-	log.Printf("Server started at http://localhost:%v/swagger/", conf.Api.Port)
+	log.Printf("server started at http://localhost:%v/swagger/", conf.Api.Port)
 	log.Fatal(http.ListenAndServe("localhost:"+strconv.Itoa(conf.Api.Port), nil))
 }
